tests/parse_print/autogen-bilals-fixed/820969cf7025c19eb6a8b65584b5c7ec/stderr.expected
Error:
    tests/parse_print/autogen-bilals-fixed/820969cf7025c19eb6a8b65584b5c7ec/820969cf7025c19eb6a8b65584b5c7ec.essence:175:39:
    |
175 |                                       (partition() : `partition from int`) - (partition() : `partition from int`)),
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from int

tests/parse_print/autogen-bilals-fixed/820969cf7025c19eb6a8b65584b5c7ec/820969cf7025c19eb6a8b65584b5c7ec.essence:175:78:
    |
175 |                                       (partition() : `partition from int`) - (partition() : `partition from int`)),
    |                                                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from int
